[package]
name = "alender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.3.1"
sea-orm = { version = "0.11.3", features = ["sqlx-sqlite", "runtime-tokio"] }
tokio = { version = "1.28.2", features = ["full"] }
